# agent-proof

./: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  comparison.py  main.py  schemas.py  store.py
backend/tests/: test_platform_api.py
benchmark/: __init__.py  mutations.py  schema.py  tasks.py  validators.py
judges/: __init__.py  contracts.py
tests/: test_adversarial_mutations.py  test_benchmark_tasks.py  test_contract_scoring.py  test_tool_environment.py
tool_environment/: __init__.py  environment.py  errors.py  services.py  state.py
